ProjektKubernetes/k8s/frontend/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: production
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: dawidgebert/frontend-chmurowe:latest
        ports:
        - containerPort: 80
        imagePullPolicy: IfNotPresent

---

apiVersion: v1
kind: Service
metadata:
  namespace: production
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
